<resources>
    <string name="app_name">Smart Connect</string>
    <string name="tts_action">tts_action</string>
    <string name="a2dp_setting">a2dp_setting</string>
    <string name="a2dp_mac_address">mac_address</string>
    <string name="a2dp_device_name">device_name</string>
    <string name="app_version_key">app_version_key</string>
    <string name="open_source_attributions_key">open_source_attributions_key</string>
    <string name="direct_call_setting_number">direct_call_setting_number</string>
    <string name="direct_call_setting_type">direct_call_setting_type</string>
    <string name="direct_call_setting_contact">direct_call_contact</string>
    <string name="facebook_audience">facebook_audience</string>
    <string name="ga_trackingId">UA-21337977-30</string>
    <string name="ga_sampleFrequency">5</string>
    <string name="facebook_api_key">394649867250121</string>
    <string name="facebook_url">http://graph.facebook.com</string>
    <string name="name_smartwatch">SmartWatch</string>
    <string name="name_smart_wireless_headset_pro">Smart Wireless Headset pro</string>
    <string name="semc_support_url">http://www.sonyericsson.com/support</string>
    <string name="semc_url">http://www.sonyericsson.com/cws/products/accessories</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="intent_extra_accessory">com.sonyericsson.extras.liveware.extra.accessory</string>
    <string name="attributions_text">"The product includes:

The Android Open Source Project (Support Package v4; packages/apps/DeskClock: Alarm(s).java; frameworks/base/core/res/res/drawable-hdpi: ic_audio_*.png; BitmapFun: ImageCache.java, ImageWorker.java, RetainFragment.java, Utils.java; packages/apps/Contacts: PhotoSelectionHandler.java, ContactPhotoUtils.java; frameworks/base/core: Telephony.java)

Project home page: http://source.android.com/

Copyright © 2006–2011 The Android Open Source Project

The Android Open Source Project is licensed under the Apache License, Version 2.0 (the \"License\").

You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.

See the License for the specific language governing permissions and limitations under the License.

Facebook SDK for Android

Project home page: https://github.com/facebook/facebook-android-sdk

Copyright © 2011 Facebook, Inc.

Original software licensed under the Apache License, Version 2.0 (the \"License\"); you may not use this software except in complience with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an \"AS IS\" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.

See the License for the specific language governing permissions and limitations under the License."</string>
    <string name="copyright_year">2013</string>
    <string name="event_name_usb_product_4046_53610">Event LiveDock™</string>
    <string name="event_name_usb_product_4046_53626">Event SmartDoc</string>
    <string name="event_name_usb_product_4046_65535">Event SmartDoc</string>
    <string name="event_name_usb_class_gamecontroller">Event Game Controller</string>
    <string name="event_name_usb_class_keyboard">Event Keyboard</string>
    <string name="event_name_usb_class_mouse">Event Mouse</string>
    <string name="event_name_usb_class_storage">Event Mass Storage</string>
    <string name="event_name_usb_class_generic">Event Generic</string>
    <string name="event_name_usb_class_audio">Event Audio</string>
    <string name="event_name_bluetooth_headset">Event Bluetooth Headset</string>
    <string name="event_name_bluetooth_headphones">Event Bluetooth Headphones</string>
    <string name="event_name_bluetooth_speakers">Event Bluetooth Speakers</string>
    <string name="event_name_bluetooth_mouse">Event Bluetooth Mouse</string>
    <string name="event_name_bluetooth_gamecontroller">Event Bluetooth Game Controller</string>
    <string name="event_name_liveview">Event LiveView</string>
    <string name="event_name_sbh20">Event SBH20</string>
    <string name="event_name_srs_btv25">Event SRS-BTV25</string>
    <string name="event_name_mdr_1rbt">Event MDR-1RBT</string>
    <string name="event_name_dr_btn200">Event DR-BTN200</string>
    <string name="event_name_sony_tablet_s">Event Sony Tablet S</string>
    <string name="name_nfc_product_1.2">@string/name_nfc_product_1.1</string>
    <string name="name_nfc_product_1.3">@string/name_nfc_product_1.1</string>
    <string name="name_nfc_product_1.4">@string/name_nfc_product_1.1</string>
    <string name="name_nfc_product_2.5">@string/name_nfc_product_1.1</string>
    <string name="name_nfc_product_2.6">@string/name_nfc_product_1.1</string>
    <string name="name_nfc_product_2.7">@string/name_nfc_product_1.1</string>
    <string name="name_nfc_product_2.8">@string/name_nfc_product_1.1</string>
    <string name="smartkey_application_headset" />
    <string name="name_srs_btv5">SRS-BTV5</string>
    <string name="name_sony_bravia">Sony BRAVIA</string>
    <string name="name_tv">TV</string>
    <string name="name_sony_nasne">Sony Nasne</string>
    <string name="name_ps3">PS3</string>
    <string name="name_pc">PC</string>
    <string name="name_phone">Phone</string>
    <string name="name_sony_bdr">Sony BDR</string>
    <string name="name_dms">DMS</string>
    <string name="name_dmr">DMR</string>
    <string name="name_wfd">WFD</string>
    <string name="name_bluetooth">Bluetooth</string>
    <string name="name_lt29i">LT29i</string>
    <string name="name_sony_vaio">Sony VAIO</string>
    <string name="name_sr_7734">@string/name_srs_btv5</string>
    <string name="name_charging_dock">@string/name_charger_dock</string>
    <string name="event_name_charger_nc">Night</string>
    <string name="event_name_headset_nc">Music on the go</string>
    <string name="event_name_headphones_nc">Music at home</string>
    <string name="event_name_nfc_product_1.1_nc">Car</string>
    <string name="event_name_nfc_product_1.2_nc">Home</string>
    <string name="event_name_nfc_product_1.3_nc">Bedroom</string>
    <string name="event_name_nfc_product_1.4_nc">Office</string>
    <string name="event_name_nfc_product_2.5_nc">Active</string>
    <string name="event_name_nfc_product_2.6_nc">Listen</string>
    <string name="event_name_nfc_product_2.7_nc">Watch</string>
    <string name="event_name_nfc_product_2.8_nc">Play</string>
    <string name="event_name_bluetooth_keyboard_nc">Office</string>
    <string name="event_name_mw600_nc">Car</string>
    <string name="event_name_mhl_nc">TV</string>
    <string name="event_name_charging_dock_nc">View</string>
    <string name="preference_key_enable_google_analytics">key_google_analytics</string>
    <string name="preference_key_enable_vibrations">key_vibrate</string>
    <string name="preference_key_enable_notifications">key_notification</string>
    <string name="preference_key_enable_toasts">key_toast</string>
    <string name="preference_key_screen_main">key_main_screen</string>
    <string name="preference_key_category_general">key_category_general</string>
    <string name="preference_key_enable_tts">key_tts</string>
    <string name="accy_view_download">Download and install</string>
    <string name="accy_view_set_and_search">Assign and search</string>
    <string name="app_info">App info</string>
    <string name="app_launch">App start</string>
    <string name="app_name_homescreen">Smart Connect</string>
    <string name="app_view_search">Search for more applications</string>
    <string name="cancel">Cancel</string>
    <string name="context_menu_item_delete_accy">Delete</string>
    <string name="context_menu_item_disable_app">Disable</string>
    <string name="install_device_msg">Connected: %s</string>
    <string name="menu_item_about">Version</string>
    <string name="menu_item_search_updates">Check for updates</string>
    <string name="name_charger">Charger</string>
    <string name="name_charger_dock">Charging dock</string>
    <string name="name_headphones">Headphones</string>
    <string name="name_headset">Headset</string>
    <string name="name_usb_keyboard">USB keyboard</string>
    <string name="name_usb_mouse">USB mouse</string>
    <string name="name_usb_gamepad">USB Game controller</string>
    <string name="name_usb_speakers">USB speakers</string>
    <string name="name_usb_headset">USB headset</string>
    <string name="name_usb_disk">USB external memory</string>
    <string name="dlg_permission_title">Permission required</string>
    <string name="dlg_permission_query">Allow Sony Smart Extras™ applications to read application data?</string>
    <string name="dlg_permission_footer">Note that use of application may not be possible if permission is denied</string>
    <string name="select_smart_key_app_info">Select application to take action when pressing the app key on the device</string>
    <string name="device_tab">Devices</string>
    <string name="event_tab">Events</string>
    <string name="edit_event_menu_item_rename">Rename event</string>
    <string name="edit_event_menu_item_delete_items">Delete items</string>
    <string name="edit_event_menu_item_stop">End event</string>
    <string name="menu_item_delete_event">Delete event</string>
    <string name="action_launch_app">Start application</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="play_next">Play next</string>
    <string name="play_track">Play track</string>
    <string name="sms_message_prompt">Message</string>
    <string name="volume_ring_description">Ringtone &amp; notifications</string>
    <string name="volume_alarm_description">Alarms</string>
    <string name="to">To</string>
    <string name="volume_media_description">Music, video, games &amp; other media</string>
    <string name="facebook_message_logged_in">Logged in</string>
    <string name="facebook_message_audience">Audience</string>
    <string name="facebook_message_audience_friends">Friends</string>
    <string name="facebook_message_prompt">Message to post</string>
    <string name="smartkey_select_new">Select new</string>
    <string name="welcome_page_devices">Smart Connect helps you connect your devices and find out how to use them.</string>
    <string name="welcome_page_events">Decide what will happen when you connect to another device. Smart Connect is device and time sensitive. Choose between single and multiple actions.</string>
    <string name="choose_image_title">Change image</string>
    <string name="preference_title_google_analytics">Data collection</string>
    <string name="preference_summary_google_analytics">Help improve quality by allowing collection of anonymous usage statistics</string>
    <string name="preference_title_event_toast">Popup</string>
    <string name="preference_summary_event_toast">Show small popup when event starts and ends</string>
    <string name="preference_title_event_notification">Notification</string>
    <string name="preference_summary_event_notification">Show notification in status bar when event starts and ends</string>
    <string name="preference_title_event_vibrate">Vibration</string>
    <string name="preference_summary_event_vibrate">Vibrate when an event starts and ends</string>
    <string name="preference_category_general">General</string>
    <string name="preference_category_event">Event</string>
    <string name="choose_contact">Select contact</string>
    <string name="preference_title_tts">Text to speech</string>
    <string name="preference_summary_tts">Automatically read incoming text messages out loud</string>
</resources>