<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/preference_key_screen_main" >

    <PreferenceCategory
        android:key="@string/preference_key_category_general"
        android:title="@string/preference_category_general" >
        <com.sonyericsson.extras.liveware.preference.BidiCheckBoxPreference
            android:defaultValue="true"
            android:key="@string/preference_key_enable_google_analytics"
            android:persistent="true"
            android:summary="@string/preference_summary_google_analytics"
            android:title="@string/preference_title_google_analytics" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/preference_category_event" >
        <com.sonyericsson.extras.liveware.preference.BidiCheckBoxPreference
            android:defaultValue="true"
            android:key="@string/preference_key_enable_toasts"
            android:summary="@string/preference_summary_event_toast"
            android:title="@string/preference_title_event_toast" />
        <com.sonyericsson.extras.liveware.preference.BidiCheckBoxPreference
            android:defaultValue="true"
            android:key="@string/preference_key_enable_notifications"
            android:summary="@string/preference_summary_event_notification"
            android:title="@string/preference_title_event_notification" />
        <com.sonyericsson.extras.liveware.preference.BidiCheckBoxPreference
            android:defaultValue="true"
            android:key="@string/preference_key_enable_vibrations"
            android:summary="@string/preference_summary_event_vibrate"
            android:title="@string/preference_title_event_vibrate" />
        <com.sonyericsson.extras.liveware.preference.BidiCheckBoxPreference
            android:defaultValue="false"
            android:dependency="@string/preference_key_enable_tts"
            android:key="@string/preference_key_enable_tts"
            android:summary="@string/preference_summary_tts"
            android:title="@string/preference_title_tts" />
    </PreferenceCategory>

</PreferenceScreen>