<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:paddingLeft="@dimen/welcome_page_item_padding" android:paddingRight="@dimen/welcome_page_item_padding" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/device_tab" style="@style/WelcomePageHeader.full" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_page_devices" style="@style/WelcomePageBody.full" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View style="@style/WelcomePageImagePadding.orient.full" />
        <com.sonyericsson.extras.liveware.ui.AspectRatioImageView android:src="@drawable/welcome_page_devices_image" style="@style/WelcomePageImage" />
    </LinearLayout>
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="-24.0dip" android:text="@string/event_tab" style="@style/WelcomePageHeader.full" />
    <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_page_events" style="@style/WelcomePageBody.full" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View style="@style/WelcomePageImagePadding.orient.full" />
        <com.sonyericsson.extras.liveware.ui.AspectRatioImageView android:src="@drawable/welcome_page_events_image" style="@style/WelcomePageImage" />
    </LinearLayout>
</LinearLayout>