<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@id/dialog_permission_root" android:layout_width="fill_parent" style="@style/ASFPermDialogBody"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dlg_permission_title" style="@style/ASFDialogText" />
    <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:weightSum="1.0">
        <ImageView android:gravity="center" android:layout_gravity="top|left|center" android:id="@id/permission_app_icon" android:paddingTop="4.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.2" />
        <TextView android:id="@id/permission_app_name" android:paddingLeft="10.0dip" android:paddingRight="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="0.8" style="@style/ASFDialogText" />
    </LinearLayout>
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dlg_permission_query" style="@style/ASFDialogText" />
    <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/dlg_permission_footer" style="@style/ASFDialogSmallText" />
</LinearLayout>