<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/sms_settings" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:id="@id/sms_settings_container" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <EditText android:gravity="center_vertical" android:id="@id/smsNumber" android:layout_width="0.0dip" android:layout_height="wrap_content" android:hint="@string/to" android:minEms="8" android:singleLine="true" android:phoneNumber="true" android:layout_weight="1.0" style="@style/SmsEditText" />
                <ImageButton android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_menu_invite" android:onClick="onPickContact" android:contentDescription="@string/choose_contact" style="@style/SmsEditTextButton" />
            </LinearLayout>
            <EditText android:gravity="top" android:id="@id/smsMessage" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/sms_message_prompt" android:minLines="5" />
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/footer_button_bar" />
</LinearLayout>