<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/facebook_settings" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:paddingLeft="16.0dip" android:paddingRight="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="horizontal" android:id="@id/facebookLoginContainer" android:layout_width="fill_parent" android:layout_height="@dimen/asf_list_item_height">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_gravity="center_vertical" android:clickable="false" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/facebook_message_logged_in" android:layout_weight="1.0" />
                <CheckBox android:layout_gravity="center_vertical" android:id="@id/facebookLoginStatus" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            </LinearLayout>
            <include layout="@layout/divider" />
            <LinearLayout android:gravity="center_vertical" android:orientation="vertical" android:id="@id/facebookAudienceContainer" android:layout_width="fill_parent" android:layout_height="@dimen/asf_list_item_height">
                <TextView android:textAppearance="?android:textAppearanceMedium" android:id="@id/facebookAudience" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/facebook_message_audience" />
                <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/facebookAudienceSetting" android:clickable="false" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/facebook_message_audience_friends" />
            </LinearLayout>
            <include layout="@layout/divider" />
            <EditText android:gravity="top" android:id="@id/facebookMessage" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="7.0dip" android:hint="@string/facebook_message_prompt" android:minLines="4" />
        </LinearLayout>
    </ScrollView>
    <include layout="@layout/footer_button_bar" />
</LinearLayout>