<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@id/music_settings" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentTop="true">
        <RadioGroup android:orientation="vertical" android:id="@id/music_radio_group" android:layout_width="fill_parent" android:layout_height="wrap_content" style="@style/ASFListStyle">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:onClick="onPlaySelected" style="@style/PlayTracksRow">
                    <ImageView android:src="@drawable/music_play" style="@style/ASFListItemIcon.full" />
                    <TextView android:text="@string/play" style="@style/PlayTracksText" />
                    <RadioButton android:id="@id/radio_button_play" style="@style/PlayTracksRadioButton" />
                </LinearLayout>
                <include layout="@layout/divider" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:onClick="onPlayNextSelected" style="@style/PlayTracksRow">
                    <ImageView android:src="@drawable/music_play_next" style="@style/ASFListItemIcon.full" />
                    <TextView android:text="@string/play_next" style="@style/PlayTracksText" />
                    <RadioButton android:id="@id/radio_button_play_next" style="@style/PlayTracksRadioButton" />
                </LinearLayout>
                <include layout="@layout/divider" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <LinearLayout android:onClick="onPauseSelected" style="@style/PlayTracksRow">
                    <ImageView android:src="@drawable/music_pause" style="@style/ASFListItemIcon.full" />
                    <TextView android:text="@string/pause" style="@style/PlayTracksText" />
                    <RadioButton android:id="@id/radio_button_pause" style="@style/PlayTracksRadioButton" />
                </LinearLayout>
                <include layout="@layout/divider" />
            </LinearLayout>
            <LinearLayout android:onClick="onPlayTrackSelected" style="@style/PlayTracksRow">
                <ImageView android:src="@drawable/music_play" style="@style/ASFListItemIcon.full" />
                <LinearLayout android:gravity="center_vertical" android:layout_gravity="center_vertical" android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_weight="1.0">
                    <TextView android:textAppearance="?android:textAppearanceMedium" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/play_track" />
                    <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/track_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:singleLine="true" />
                </LinearLayout>
                <RadioButton android:id="@id/radio_button_play_track" style="@style/PlayTracksRadioButton" />
            </LinearLayout>
        </RadioGroup>
    </ScrollView>
</RelativeLayout>