<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@id/volumeRoot" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" style="@style/VolumeSet"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <TextView android:textAppearance="?android:textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/volume_media_description" style="@style/VolumeText" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/Volume">
            <ImageView android:id="@id/media_mute_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/volume_media_description" style="@style/VolumeImage" />
            <SeekBar android:id="@id/media_volume_seekbar" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/VolumeSeekBar" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:id="@id/ringer_section" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textAppearance="?android:textAppearanceSmall" android:id="@id/ringer_description_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/volume_ring_description" style="@style/VolumeText" />
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <ImageView android:id="@id/ringer_mute_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/volume_ring_description" style="@style/VolumeImage" />
                <SeekBar android:id="@id/ringer_volume_seekbar" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/VolumeSeekBar" />
            </LinearLayout>
        </LinearLayout>
        <TextView android:textAppearance="?android:textAppearanceSmall" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/volume_alarm_description" style="@style/VolumeText" />
        <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:paddingLeft="8.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
            <ImageView android:id="@id/alarm_mute_button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:contentDescription="@string/volume_alarm_description" style="@style/VolumeImage" />
            <SeekBar android:id="@id/alarm_volume_seekbar" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" style="@style/VolumeSeekBar" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>